<resources>
    <string name="app_name">居家用藥紀錄輔助系統</string>
    <string name="pharmacy_search">藥局搜尋</string>
    <string name="medcine_search">藥品搜尋</string>
    <string name="MonthlyReport">用藥反應月報</string>
    <string name="Prescriptions">個人藥單</string>
    <string name="DetailSetting">細項設定</string>
    <string name="AccountLink">帳號連結</string>
    <string name="txtuser">-使用者-</string>
    <string name="txtUserName">陳萬里</string>
    <string name="TabLayout">TabLayout</string>
    <string name="Viewpager">Viewpager</string>
    <string name="Home">Home</string>
    <string name="Measurement">生理測量</string>
    <string name="FavPharmacy">常用藥局</string>
    <string name="Logout">登出</string>
    <string name="MonthlyReport2">用藥反應紀錄</string>
    <string name="MonthlyReport1">"   —新增用藥反應紀錄"</string>
    <string name="period">早上飯後:</string>
    <string name="timing">12:00</string>
    <string name="setTiming">設定時間</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Null"></string>

    <string-array name="spnDose_list">
        <item>請選擇</item>
        <item>半顆</item>
        <item>一顆</item>
        <item>兩顆</item>
    </string-array>

    <string-array name="spnPeriod_list">
        <item>請選擇</item>
        <item>早上</item>
        <item>中午</item>
        <item>晚上</item>
        <item>睡前</item>
        <item>早、晚</item>
        <item>三餐</item>
        <item>三餐、睡前</item>
    </string-array>

    <string-array name="spnTiming_list">
        <item>請選擇</item>
        <item>飯後</item>
        <item>隨餐服用</item>
        <item>飯前</item>
    </string-array>

    <string-array name="spnFrequency_list">
        <item>請選擇</item>
        <item>每天</item>
        <item>每隔一天</item>
        <item>每隔兩天</item>
        <item>每隔三天</item>
        <item>每隔四天</item>
        <item>每隔五天</item>
        <item>每隔六天</item>
        <item>每隔七天</item>
    </string-array>

    <string-array name="spnMedDay_list">
        <item>請選擇</item>
        <item>3</item>
        <item>7</item>
        <item>28</item>
    </string-array>

    //Sign up
    <string name="PersonalInformation">基本資料</string>
    <string name="Male">男</string>
    <string name="Female">女</string>
    <string name="YMD">YYYY/MM/DD</string>
    <string name="Email">E-mail</string>
    <string name="Address">地址</string>
    <string name="Phone">手機</string>
    <string name="BD">生日</string>
    <string name="Name">姓名</string>
    <string name="Gender">性別</string>
    <string name="btnNext">下一頁</string>
    <string name="AP">帳號密碼</string>
    <string name="Identity">身分證字號</string>

    //MedHistory
    <string name="HealthTitle">健康資料</string>
    <string name="N">無</string>
    <string name="Y">有</string>
    <string name="Register">註冊</string>
    <string name="DrgugAllergy">藥物過敏：</string>
    <string name="Pregnate">懷孕：</string>
    <string name="Week">週數</string>
    <string name="Smoke">吸菸史：</string>
    <string name="YSmoke">有抽菸</string>
    <string name="Betlet">檳榔：</string>
    <string name="YBetlet">有吃檳榔</string>
    <string name="Drunk">喝酒：</string>
    <string name="Change">修改</string>

    <string name="ok">確定</string>
    <string name="cancel">取消</string>

    <string name="account">帳號</string>
    <string name="date">2023/02/02</string>
    <string name="time">11:11:01</string>
    <string name="memo">睡前喝太多冰水</string>

    <string-array name="Drunk">
        <item>無</item>
        <item>每周三次以內(偶爾)</item>
        <item>每周三次以上(經常)</item>
    </string-array>

    <string name="screen1">Upload a Video</string>
    <string name="screen2">Create a Short</string>
    <string name="screen3">Go Live</string>
    <string name="screen1desc">Record a new video or select a video you already have on your phone.
        Watch YouTube Videos for Free</string>
    <string name="screen2desc">Create, edit, and upload your own short videos.
        All you need is an idea and a phone to record and share Shorts. </string>
    <string name="screen3desc">YouTube live streaming allows you to reach your community in real time.
    Go live on YouTube from webcam, mobile and encoder streaming.</string>
    <string name="startDesc">Create a long video or shorts and upload on youtube. Interact with your subscribers on youtube live.</string>
</resources>
