<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfad2"
    android:orientation="vertical">
    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:id="@+id/txtDrugAllergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/DrgugAllergy"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkbxDrugAllergyN"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/N"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/chkbxDrugAllergyY"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="有："
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edtDrugAllergy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="18dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/txtPregnant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pregnate"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkbxPregnantN"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/N"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/chkbxPregnantY"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="6dp"
                android:text="@string/Y"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="週數："
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edtPregnant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="1"
                android:inputType="textPersonName"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtSmoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Smoke"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkbxSmokeN"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/N"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/chkbxSmokeY"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/YSmoke"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtBetlet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Betlet"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkbxBetletN"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/N"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/chkbxBetletY"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/YBetlet"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDrunk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Drunk"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/SpiDrunk"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="11dp"
            android:background="#E3E1AD"
            android:entries="@array/Drunk"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/btnfinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/first_btn_bg"
            android:gravity="center"
            android:text="@string/Change"
            android:textColor="@android:color/background_light"
            android:textSize="20dp"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>