<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:background="@drawable/recycle_time_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="5dp"
            android:text="@string/memo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000"
            android:textSize="19dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/person" />

            <TextView
                android:id="@+id/txtAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/account"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#808080"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>